longhorn/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn-system
spec:
  ingressClassName: nginx

  rules:
    - host: longhorn.kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend    # Longhorn UI 서비스 이름
                port:
                  number: 80
